# abcmidi

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  Makefile.in  README.md  VERSION  abc.h  abcmatch.c  config.h  config.h.in  config.status  configure  configure.ac  crack.c  debug.c  drawtune.c  drawtune.h  genmidi.c  genmidi.h  makefile  makefile.w32  matchsup.c  mftext.c  midi2abc.c  midicopy.c  midicopy.h  midifile.c  midifile.h  midistats.c  music_utils.c  music_utils.h  parseabc.c  parseabc.h  parser2.c  parser2.h  position.c  pslib.c  queues.c  queues.h  (+6 more)
.github/workflows/: test.yml
doc/: AUTHORS  CHANGES  abc2abc.1  abc2midi.1  abcguide.txt  abcmatch.1  abcmatch.txt  drums.txt  gpl.txt  history.txt  hudsonshift.txt  mftext.1  midi2abc-stats.txt  midi2abc.1  midicopy.1  midistats.1  readme.txt  yaps.1  yapshelp.txt
doc/programming/: abc2midi.txt  coding.txt  eq53.txt  midi2abc.txt  split.abc  yaps.txt
doc/programming/cvs/: Entries  Repository  Root
legacy_code/: casecmp.c
legacy_code/makefiles/: makefile.bcc  makefile.wat  makefile.wd  pcc.mak
makefiles/: djgpp.mak  makefile.ming  makefile.w32  unix.mak
pt/: customstress.txt  default_stress.txt  doublejig.txt  hornpipe.txt  reel.txt
samples/: partdemo.abc
tests/: CMakeLists.txt  run_test.cmake
tests/golden/: abc2abc_araber.txt  abc2abc_baym_rebin.txt  abc2abc_boys.txt  abc2abc_coleraine.txt  abc2abc_daramud.txt  abc2abc_demo.txt  abc2abc_dergasn.txt  abc2abc_detune.txt  abc2abc_drums.txt  abc2abc_temperament.txt  abc2abc_words.txt  abc2midi_araber.txt  abc2midi_baym_rebin.txt  abc2midi_boys.txt  abc2midi_coleraine.txt  abc2midi_daramud.txt  abc2midi_demo.txt  abc2midi_demo_11.txt  abc2midi_demo_12.txt  abc2midi_demo_4.txt  abc2midi_demo_5.txt  abc2midi_dergasn.txt  abc2midi_detune.txt  abc2midi_detune_2.txt  abc2midi_drums.txt  abc2midi_lyrics_demo_5.txt  abc2midi_lyrics_words.txt  abc2midi_pmar_demo_5.txt  abc2midi_pmar_partdemo.txt  abc2midi_temperament.txt  abc2midi_temperament_2.txt  abc2midi_words.txt  abcmatch_coleraine.txt  mftext_coleraine.txt  midi2abc_coleraine.txt  midicopy_coleraine.txt  midistats_coleraine.txt  yaps_coleraine.txt
